--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   zego_zimkit: ^1.19.6
+  get: ^4.7.2
 
 dev_dependencies:
   flutter_test:
